Lag endepunkt for å hente foreleggingresultat
Da kan vi vise en kvitteringsside e.l. med hva bruker har svart.
Vi begynner med å returnere samme objekt som postes i det brukeren sender inn inntektskjemaet (med dummy-data enn så lenge), og så må vi senere vurdere om man f.eks. også ønsker å ha med de forelagte dataene her.
